--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,71 @@
 .idea
+# Binaires
+security-audit
+security-audit.exe
+*.exe
+*.dll
+*.so
+*.dylib
+build/
+
+# Fichiers de test
+*.test
+*.out
+
+# Couverture de tests
+*.cover
+coverage.txt
+coverage.html
+
+# Dépendances
+vendor/
+
+# IDE et éditeurs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Fichiers OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Configuration locale
+config.local.yaml
+.env
+.env.local
+
+# Résultats de scan et rapports (à ignorer)
+results/
+reports/
+*.json
+*.xml
+*.html
+*.csv
+scan-*.txt
+
+# Fichiers temporaires
+tmp/
+temp/
+
+# Node modules (pour le frontend plus tard)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
+web/frontend/dist/
+web/frontend/node_modules/
+
+# Cache
+.cache/
